working v5 fixed overflow

--- a/css/new-style.css
+++ b/css/new-style.css
@@ -8,6 +8,10 @@ dark green   rgb(85, 128, 0);
 body {
   color: white;
 }
+main {
+  position: relative;
+  overflow-x: hidden;
+}
 h1, h2, h3, h4, h5, .row {
   margin: 0;
   padding: 0;
